--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -33,3 +33,8 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$IMAGE_NAME:${{ env.TAG }} .
           docker push $ECR_REGISTRY/$IMAGE_NAME:${{ env.TAG }}
+
+  deploy_compose:
+    runs-on: self-hosted
+
+    steps:
