--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -3,16 +3,16 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - teste
 
 env:
   ECR_REGISTRY: 490360410258.dkr.ecr.sa-east-1.amazonaws.com/
   IMAGE_NAME: teste-app
-  TAG:
+  TAG: TAG
 
 jobs:
   build-and-push:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -23,7 +23,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: <your-aws-region>
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -34,7 +34,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$IMAGE_NAME:${{ env.TAG }} .
           docker push $ECR_REGISTRY/$IMAGE_NAME:${{ env.TAG }}
 
-  deploy_compose:
-    runs-on: self-hosted
+  # deploy_compose:
+  #   runs-on: self-hosted
 
-    steps:
+  #   steps:
