--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           TAG=$(git rev-parse --short "$GITHUB_SHA")
-          IMAGE_TAG="${{ github.run_number }}-$TAG"
+          IMAGE_TAG="${{ github.run_number }}-${TAG}"
           docker build -t "$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG" .
           docker push "$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG"
           sed -i "s,image:.*,image: ${{ github.sha }}," README.md
