--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -30,8 +30,8 @@ jobs:
         run: |
           TAG=$(git rev-parse --short "$GITHUB_SHA")
           IMAGE_TAG="${{ github.run_number }}-${TAG}"
-          docker build -t "$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG" .
-          docker push "$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG"
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           sed -i "s,image:.*,image: ${{ github.sha }}," README.md
 
   # deploy_compose:
