--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -28,6 +28,8 @@ jobs:
           ECR_REPOSITORY: teste-app
       - name: Build and push Docker image
         run: |
+          ls
+          echo "${{ steps.login-ecr.outputs.registry }}"
           TAG=$(git rev-parse --short "$GITHUB_SHA")
           IMAGE_TAG="${{ github.run_number }}-${TAG}"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
