--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Replacing image tag
         run: |
+          pwd
           cat file.txt
           IMAGE_TAG=$(cat file.txt)
           echo $IMAGE_TAG
