--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -53,7 +53,11 @@ jobs:
         uses: actions/download-artifact@v2.1.1
         with:
           name: artifact
-          path: main
+
+      - name: Receiving image tag value
+        run: |
+          ls
+          ls -R
 
       - name: Checkout code
         uses: actions/checkout@v2
