--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -81,6 +81,6 @@ jobs:
           git config --global user.email ${{ github.event.pusher.email }}
           git config --global user.name ${{ github.event.pusher.name }}
           git add .
-          git commit -m "Updated image tag to $IMAGE_TAG"
+          git commit -m "Updated image tag"
           git log --patch
           git push origin teste
