--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -80,4 +80,4 @@ jobs:
           git add .
           git commit -m "Updated image tag"
           git log --patch
-          git push origin teste
+          git push https://${{ secrets.TOKEN }}@github.com/souzagmu/go-app.git HEAD:teste
