--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -58,18 +58,19 @@ jobs:
         run: |
           IMAGE_TAG=$(cat file.txt)
           echo $IMAGE_TAG
+          C="sed -i "s,image:.*,image: $IMAGE_TAG," README.md"
 
       - name: Checking container status and deploy the app
         run: |
           cat README.md
           if [ -z $(docker ps -q) ]; then
             echo $IMAGE_TAG
-            sed -i "s,image:.*,image: $IMAGE_TAG," README.md
+            eval $c
             echo "docker compose up -d"
           else
             echo $IMAGE_TAG
             echo "docker compose down"
-            sed -i "s,image:.*,image: $IMAGE_TAG," README.md
+            eval $c
             echo "docker compose up -d"
             cat README.md
           fi
