--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -65,12 +65,12 @@ jobs:
           cat README.md
           if [ -z $(docker ps -q) ]; then
             echo $IMAGE_TAG
-            eval $c
+            eval $C
             echo "docker compose up -d"
           else
             echo $IMAGE_TAG
             echo "docker compose down"
-            eval $c
+            eval $C
             echo "docker compose up -d"
             cat README.md
           fi
