--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -56,21 +56,20 @@ jobs:
 
       - name: Assigning image as env var
         run: |
-          IMAGE_TAG=$(cat file.txt)
+          export IMAGE_TAG=$(cat file.txt)
           echo $IMAGE_TAG
-          C="sed -i \"s,image:.*,image: $IMAGE_TAG,\" README.md"
 
       - name: Checking container status and deploy the app
         run: |
           cat README.md
           if [ -z $(docker ps -q) ]; then
             echo $IMAGE_TAG
-            eval $C
+            sed -i "s,image:.*,image: $IMAGE_TAG," README.md
             echo "docker compose up -d"
           else
             echo $IMAGE_TAG
             echo "docker compose down"
-            eval $C
+            sed -i "s,image:.*,image: $IMAGE_TAG," README.md
             echo "docker compose up -d"
             cat README.md
           fi
