--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -63,11 +63,11 @@ jobs:
         run: |
           cat README.md
           if [ -z $(docker ps -q) ]; then
-            echo $IMAGE_TAG
-            sed -i "s,image:.*,image: $IMAGE_TAG," README.md
+            echo ${IMAGE_TAG}
+            sed -i "s,image:.*,image: ${IMAGE_TAG}," README.md
             echo "docker compose up -d"
           else
-            echo $IMAGE_TAG
+            echo ${{ env.IMAGE_TAG }}
             echo "docker compose down"
             sed -i "s,image:.*,image: $IMAGE_TAG," README.md
             echo "docker compose up -d"
