--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -60,8 +60,10 @@ jobs:
           echo $IMAGE_TAG
 
       - name: Checking container status and deploy the app
+        env:
+          IMAGE_TAG: $IMAGE_TAG
         run: |
-          cat README.md
+          echo $IMAGE_TAG
           if [ -z $(docker ps -q) ]; then
             echo ${IMAGE_TAG}
             sed -i "s,image:.*,image: ${IMAGE_TAG}," README.md
