--- a/.github/workflows/teste.yaml
+++ b/.github/workflows/teste.yaml
@@ -67,12 +67,12 @@ jobs:
           TAG: $IMAGE_TAG
         run: |
           if [ -z $(docker ps -q) ]; then
-            sed -i "s,image:.*,image: $TAG," README.md
+            sed -i "s,image:.*,image: ${{ env.TAG }}," README.md
             echo "docker compose up -d"
           else
             echo ${{ env.IMAGE_TAG }}
             echo "docker compose down"
-            sed -i "s,image:.*,image: $TAG," README.md
+            sed -i "s,image:.*,image: ${{ env.TAG }}," README.md
             echo "docker compose up -d"
           fi
       - name: Cleaning docker images
